--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./detals/icon.png">
+    <link rel="stylesheet" href="./style/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
     <title>Приглашение</title>
 </head>
 <body>
-    
+    <div class="con fon">
+        <div class="tak">Таклифномa</div>
+        <div class="uzb">Узбек тили</div>
+        <div class="input"><input class="name" type="text" placeholder="Исмингизни киритинг"></div>
+        <div class="uzb">Русский язык</div>
+        <div class="tak">Приглашение</div>
+    </div>
 </body>
 </html>
