--- a/html/uzb.html
+++ b/html/uzb.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="fon con"><div class="tak">Таклифнома</div><div class="p"><div class="p">Хурматлий азиз мехмонимиз</div>
+<div class="fon con"><div class="tak">Таклифнома</div><div class="p"><div class="p">Хурматлий азиз <div class="name" id="myDiv">мехмонимиз</div></div>
 <div class="p">Сизни азиз фарзандларимиз</div>
 <div class="i">Илхомжон ва Саодатхон</div><div class="p">
 ларнинг никох туйлари муносабати билан</div><div class="p">
@@ -21,15 +21,18 @@
 Манзил: «ОЛМОС» ресторани </div><div class="p">>
 Мулжал: Ташкент шахар, Уч-Тепа тумани, </div><div class="p">
 24кв, Катта Хирмонтепа кочаси</div></div>
-</div>
-
-    <!-- <div class="invitation-container">
-        <h1>To'y Sanasigacha Qolgan Vaqt</h1>
+<button><a href="https://maps.app.goo.gl/f3As4sRniuf8jStC8"></a>Манзил</button>
+<div class="invitation-container">
         <div id="countdown">
             <p id="time-left"></p>
         </div>
-    </div> -->
+    </div>
+</div>
 
-    <script src="../script/script.js"></script>
+    
+
+    <script src="../script/script.js">
+       
+    </script>
 </body>
 </html>
