--- a/html/uzb.html
+++ b/html/uzb.html
@@ -21,7 +21,7 @@
 Манзил: «ОЛМОС» ресторани </div><div class="p">>
 Мулжал: Ташкент шахар, Уч-Тепа тумани, </div><div class="p">
 24кв, Катта Хирмонтепа кочаси</div></div>
-<button><a href="https://maps.app.goo.gl/f3As4sRniuf8jStC8"></a>Манзил</button>
+<button><a href="https://maps.app.goo.gl/f3As4sRniuf8jStC8">Манзил</a></button>
 <div class="invitation-container">
         <div id="countdown">
             <p id="time-left"></p>
