--- a/html/uzb.html
+++ b/html/uzb.html
@@ -22,6 +22,8 @@
 Мулжал: Ташкент шахар, Уч-Тепа тумани, </div><div class="p">
 24кв, Катта Хирмонтепа кочаси</div></div>
 <button><a href="https://maps.app.goo.gl/f3As4sRniuf8jStC8">Манзил</a></button>
+<div class="p">
+Хурмат ва эхтиром ила: Дурманов Абдулла</div>
 <div class="invitation-container">
         <div id="countdown">
             <p id="time-left"></p>
