--- a/html/rus.html
+++ b/html/rus.html
@@ -20,7 +20,7 @@
 В ресторане «ОЛМОС» </div><div class="p">
 Ориентир: г.Ташкент, Уч-Тепа р-н, </div><div class="p">>
 24кв, ул.Катта Хирмонтепа </div></div>
-<button><a href="https://maps.app.goo.gl/f3As4sRniuf8jStC8">Манзил</a></button>
+<button><a href="https://maps.app.goo.gl/f3As4sRniuf8jStC8">Адрес</a></button>
 <div class="p">
 С уважением : Дурманов Абдулла</div>
 <div class="invitation-container">
