--- a/html/uzb.html
+++ b/html/uzb.html
@@ -21,7 +21,7 @@
 Манзил: «ОЛМОС» ресторани </div><div class="p">>
 Мулжал: Ташкент шахар, Уч-Тепа тумани, </div><div class="p">
 24кв, Катта Хирмонтепа кочаси</div></div>
-<a href="https://maps.app.goo.gl/f3As4sRniuf8jStC8"><button>Манзил</button></a>
+<a href="https://maps.app.goo.gl/f3As4sRniuf8jStC8"><button>Манзил "Навигатор Google"</button></a>
 <div class="p">
 Хурмат ва эхтиром ила: Дурманов Абдулла</div>
 <div class="invitation-container">
